Wed Jun 29 22:21:38 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ocsp.c: The "reuse" behavior of d2i_ functions does
	  not work well with OpenSSL 1.0.0t. So avoid it.

Wed Jun 29 15:18:28 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_succ): optimize like r55515. (but this argument is
	  constant)

Wed Jun 29 12:41:58 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_refinement.rb: skip
	  test_prepend_after_refine_wb_miss on ARM or MIPS.
	  [ruby-core:76031] [Bug #12491]

Wed Jun 29 08:45:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (passed_block): convert passed block symbol to proc.
	  based on the patch by Daisuke Sato in [ruby-dev:49695].
	  [Bug #12531]

Wed Jun 29 03:34:41 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* bignum.c (rb_big2ulong): the old logic seems to try to avoid
	  calculating `-(long)(num-1)-1` if `num` is not LONG_MIN. (Note that
	  `-LONG_MIN` may be larger than LONG_MAX) But C compilers can
	  optimize it into single NEG instruction.
	  Therefore those two conditions can be single if-body.

	* bignum.c (rb_big2long): ditto.

	* bignum.c (rb_big2ull): ditto.

	* bignum.c (rb_big2ll): ditto.

Tue Jun 28 22:55:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pstore.rb (PStore::CHECKSUM_ALGO): extract the algorithm for
	  checksum, instead of qualified names for each times.

Tue Jun 28 22:29:36 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bootstraptest/runner.rb: do not use safe navigation operator.
	  this runner may run on older ruby.  partially revert r53110
	  (GH-1142 patched by @mlarraz).

Tue Jun 28 22:09:09 2017  Akio Tajima <artonx@yahoo.co.jp>

	* lib/fileutils.rb: rescue Errno:EACCES for chown.
	  [Bug #12520]

Tue Jun 28 18:38:09 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* ext/digest/md5/md5ossl.h: Remove excess semicolons.
	  Suppress warning on Solaris with Oracle Solaris Studio 12.
	  [ruby-dev:49692] [Bug #12524]

	* ext/digest/md5/md5cc.h: ditto.